# aurena

./: .gitignore  AUTHORS  CNAME  Makefile.am  README  TODO  autogen.sh  configure.ac  configure.in  index.html  meson.build  params.json
android/: .gitignore  AndroidManifest.xml  Makefile
android/jni/: Android.mk  android-aurena.c
android/res/layout/: main.xml
android/res/values/: strings.xml
android/src/net/noraisin/android_aurena/: AndroidAurena.java
content/: config
data/: Makefile.am  simple-controller-client.ui  simple-controller.ui
data/htdocs/: Makefile.am  index.html  manifest.json
data/htdocs/css/: aurena.css  jquery-ui.min.css  jquery-ui.theme.min.css
data/htdocs/js/: aurena.js
data/htdocs/media/: ping.mkv
data/htdocs/rec/: index.html
data/htdocs/ui/: index.html
src/: Makefile.am  aurena-server.c  aurena.c  gnome-client.py  icon.xcf  main.c  meson.build  simple-client-fullscreen.c  simple-client.c  simple-controller.c  snra-json.c  snra-json.h  snra-types.h
src/client/: Makefile.am  aur-client-types.h  aur-client.c  aur-client.h  meson.build  play.py  simple-client.c  snra-client-types.h  snra-client.c  snra-client.h
src/common/: Makefile.am  aur-component-link.c  aur-component-link.h  aur-component.c  aur-component.h  aur-config.c  aur-config.h  aur-event.c  aur-event.h  aur-json.c  aur-json.h  aur-types.h  aur-websocket-parser.c  aur-websocket-parser.h  meson.build  snra-json.c  snra-json.h  snra-types.h
src/daemon/: Makefile.am  snra-avahi.c  snra-avahi.h  snra-config.c  snra-http-resource.c  snra-http-resource.h  snra-manager.c  snra-manager.h  snra-media-db.c  snra-media-db.h  snra-resource.c  snra-resource.h  snra-server-client.c  snra-server-client.h  snra-server.c  snra-server.h  snra-types.h
src/plugins/: Makefile.am  gstodas.c  gstodas.h  gstquietdec.c  gstquietdec.h  gstquietenc.c  gstquietenc.h  gstquietplugin.c  meson.build  odas-configs.c  odas-configs.h  odas-objects.c  odas-objects.h  odas-parameters.c  odas-parameters.h
src/server/: Makefile.am  aur-avahi.c  aur-avahi.h  aur-client-proxy.c  aur-client-proxy.h  aur-config.h  aur-http-client.c  aur-http-client.h  aur-http-resource.c  aur-http-resource.h  aur-manager.c  aur-manager.h  aur-media-db.c  aur-media-db.h  aur-receiver-ingest.c  aur-receiver-ingest.h  aur-receiver-processor.c  aur-receiver-processor.h  aur-receiver.c  aur-receiver.h  aur-resource.c  aur-resource.h  aur-rtsp-media.c  aur-rtsp-media.h  aur-rtsp-play-media.c  aur-rtsp-play-media.h  aur-server-client.c  aur-server-client.h  aur-server-types.h  aur-server.c  aur-server.h  aur-websocket-parser.c  meson.build  snra-avahi.c  snra-avahi.h  snra-config.h  snra-http-resource.c  snra-http-resource.h  snra-manager.c  snra-manager.h  (+5 more)
src/static/: Makefile.am  index.html  player.js
src/static/css/: aurena.css
src/static/js/: aurena.js  sonarea.js
stylesheets/: stylesheet.css
subprojects/: odas.wrap  quiet.wrap
test/: .gitignore  Makefile.am  clock-bouncer.c  clock-receiver.c  clock-server.c  play-test.py
test/mic/: Makefile.am  aurena-mic-receive.c  aurena-mic-send.c
