AC_PREREQ([2.68])
AC_INIT([sonarea], [0.1], [thaytan@noraisin.net])

AM_INIT_AUTOMAKE([-Wno-portability 1.11 no-dist-gzip dist-bzip2 dist-xz tar-ustar])

AM_SILENT_RULES([yes])

AM_MAINTAINER_MODE([enable])

AC_CONFIG_SRCDIR([src/main.c])
AM_CONFIG_HEADER([config.h])

AC_CANONICAL_HOST

dnl Find C compiler with C99
AC_PROG_CC
AC_PROG_CC_STDC

LT_INIT

PKG_PROG_PKG_CONFIG([0.22])
PKG_CHECK_MODULES(SNRA, [gobject-2.0 glib-2.0 avahi-client avahi-glib avahi-gobject >= 0.6.30 json-glib-1.0 libsoup-2.4 gstreamer-net-1.0 gstreamer-rtsp-server-1.0])

EXTRA_CFLAGS="-DGST_USE_UNSTABLE_API"
AC_SUBST([EXTRA_CFLAGS])

AC_CONFIG_FILES([
  Makefile
  src/Makefile
  src/client/Makefile
  src/daemon/Makefile
])
AC_OUTPUT
