serverdatadir = $(datadir)/aurena/htdocs

nobase_serverdata_DATA = \
  images/logo.png \
  js/jquery-ui.min.js \
  js/aurena.js \
  js/jquery-1.11.3.min.js \
  ui/index.html \
  css/aurena.css \
  css/images/ui-bg_flat_0_aaaaaa_40x100.png \
  css/images/ui-bg_flat_75_ffffff_40x100.png \
  css/images/ui-bg_glass_55_fbf9ee_1x400.png \
  css/images/ui-bg_glass_65_ffffff_1x400.png \
  css/images/ui-bg_glass_75_dadada_1x400.png \
  css/images/ui-bg_glass_75_e6e6e6_1x400.png \
  css/images/ui-bg_glass_95_fef1ec_1x400.png \
  css/images/ui-bg_highlight-soft_75_cccccc_1x100.png \
  css/images/ui-icons_222222_256x240.png \
  css/images/ui-icons_2e83ff_256x240.png \
  css/images/ui-icons_454545_256x240.png \
  css/images/ui-icons_888888_256x240.png \
  css/images/ui-icons_cd0a0a_256x240.png \
  android-chrome-144x144.png \
  android-chrome-192x192.png \
  android-chrome-36x36.png \
  android-chrome-48x48.png \
  android-chrome-72x72.png \
  android-chrome-96x96.png \
  apple-icon.png \
  apple-icon-precomposed.png \
  apple-touch-icon-114x114.png \
  apple-touch-icon-120x120.png \
  apple-touch-icon-144x144.png \
  apple-touch-icon-152x152.png \
  apple-touch-icon-180x180.png \
  apple-touch-icon-57x57.png \
  apple-touch-icon-60x60.png \
  apple-touch-icon-72x72.png \
  apple-touch-icon-76x76.png \
  apple-touch-icon.png \
  apple-touch-icon-precomposed.png \
  mstile-144x144.png \
  mstile-150x150.png \
  mstile-310x150.png \
  mstile-310x310.png \
  mstile-70x70.png \
  favicon-16x16.png \
  favicon-194x194.png \
  favicon-32x32.png \
  favicon-96x96.png \
  favicon.ico

EXTRA_DIST = $(nobase_serverdata_DATA)
