noinst_LTLIBRARIES        = libsnra_daemon.la

libsnra_daemon_la_SOURCES = \
    snra-avahi.c \
    snra-avahi.h \
    snra-http-resource.c \
    snra-http-resource.h \
    snra-manager.c \
    snra-manager.h \
    snra-server.c \
    snra-server.h \
    snra-types.h
libsnra_daemon_la_CPPFLAGS = $(SNRA_CFLAGS) $(EXTRA_CFLAGS)
libsnra_daemon_la_LIBADD  = 
