noinst_LTLIBRARIES        = libsnra_daemon.la

libsnra_daemon_la_SOURCES = \
    snra-avahi.c \
    snra-avahi.h \
    snra-http-resource.c \
    snra-http-resource.h \
    snra-manager.c \
    snra-manager.h \
    snra-resource.c \
    snra-resource.h \
    snra-server.c \
    snra-server.h 
libsnra_daemon_la_CPPFLAGS = $(SNRA_COMMON_CFLAGS) $(GST_CFLAGS) $(GST_RTSP_CFLAGS) $(EXTRA_CFLAGS)
libsnra_daemon_la_LIBADD  = 
