EXTRA_DIST= \
	index.html \
	js/jquery-ui-1.8.22.custom.min.js \
	js/aurena.js \
	js/jquery-1.7.2.min.js \
	css/aurena.css \
	css/smoothness/jquery-ui-1.8.22.custom.css \
	css/smoothness/images/ui-bg_glass_65_ffffff_1x400.png \
	css/smoothness/images/ui-icons_cd0a0a_256x240.png \
	css/smoothness/images/ui-icons_2e83ff_256x240.png \
	css/smoothness/images/ui-icons_222222_256x240.png \
	css/smoothness/images/ui-bg_glass_75_e6e6e6_1x400.png \
	css/smoothness/images/ui-bg_flat_75_ffffff_40x100.png \
	css/smoothness/images/ui-icons_454545_256x240.png \
	css/smoothness/images/ui-bg_flat_0_aaaaaa_40x100.png \
	css/smoothness/images/ui-bg_highlight-soft_75_cccccc_1x100.png \
	css/smoothness/images/ui-bg_glass_75_dadada_1x400.png \
	css/smoothness/images/ui-bg_glass_95_fef1ec_1x400.png \
	css/smoothness/images/ui-bg_glass_55_fbf9ee_1x400.png \
	css/smoothness/images/ui-icons_888888_256x240.png
